# underrated-metric-nlp-f82f-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: robustness_summary.tex  stat_tests.tex
papers/: README.md
papers/pages/: 2406.14169_optimizing_novelty_of_top_k_recommendations_using_large_lang_manifest.txt  2502.12700_multi_novelty_improve_the_diversity_and_novelty_of_contents__manifest.txt
results/: config.json  data_quality.json  model_outputs_partial.csv  model_outputs_scored.csv  model_outputs_scored_with_reddit_hits.csv  movielens_with_underrated_scores.csv  reddit_consensus.json  reddit_consensus_topk.csv  reddit_title_hits.csv  sample_outputs.csv  statistical_tests.csv  statistical_tests_reddit_hits.csv  summary_metrics.csv  summary_metrics_reddit_hits.csv
src/: recompute_reddit_hit_metrics.py  run_underrated_experiment.py
